pod-with-config.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ethereum-pod
  namespace: default
spec:
  containers:
  - name: ethereum-container
    image: nginx
    volumeMounts:
    - name: config-volume
      mountPath: /etc/ethereum
  volumes:
  - name: config-volume
    configMap:
      name: ethereum-config
